[gd_scene load_steps=5 format=3 uid="uid://6dktaaqytu6r"]

[ext_resource type="Script" path="res://Scripts/spike.gd" id="1_xveke"]
[ext_resource type="Texture2D" uid="uid://bwwvjbylrkymh" path="res://Sprites/Boss1/spike1.png" id="2_vq2y2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hs03g"]
radius = 4.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fdlrn"]
radius = 4.0
height = 20.0

[node name="Spike" type="CharacterBody2D"]
script = ExtResource("1_xveke")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vq2y2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
shape = SubResource("CapsuleShape2D_hs03g")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_fdlrn")

[node name="TimerExist" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.6, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimerExist" to="." method="_on_timer_exist_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
